# ProjetoFinal

./: Projeto_Final_Calc_Num.ipynb  README.md  codigo.py  pyproject.toml
tests/: test_proj_final_calcnum.py
