[tool.poetry]
name = "proj-final-calcnum"
version = "0.1.0"
description = ""
authors = ["Amanda Mika Onuma <amandamika9019@edu.unifil.br>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.71.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
